--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@fortawesome/fontawesome-free": "^5.15.4",
 		"@mdi/font": "^6.4.95",
 		"autoprefixer": "9.4.3",
+		"bootstrap": "^5.1.3",
 		"browser-sync": "^2.27.7",
 		"caniuse-lite": "^1.0.30001179",
 		"css-declaration-sorter": "4.0.1",
