--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
 		"src/fonts/**"
 	],
 	"js": [
+		"src/_plugins/bootstrap.bundle.min.js",
 		"node_modules/jquery/dist/jquery.min.js",
 		"src/_plugins/swiper-bundle.js",
 		"src/_plugins/mapping-listener.js",
@@ -10,6 +11,7 @@
 		"node_modules/lazysizes/lazysizes.js"
 	],
 	"css": [
+		"src/_plugins/bootstrap.min.css",
 		"src/_plugins/font.css",
 		"src/_plugins/swiper-bundle.min.css",
 		"src/_plugins/swiper-bundle.css"
