--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@fancyapps/ui": "^4.0.7",
 		"@fortawesome/fontawesome-free": "^5.15.4",
 		"@mdi/font": "^6.4.95",
+		"antd": "^4.16.13",
 		"autoprefixer": "9.4.3",
 		"bootstrap": "^5.1.3",
 		"browser-sync": "^2.27.7",
@@ -48,6 +49,7 @@
 		"vendors": "^1.0.4"
 	},
 	"devDependencies": {
+		"gulp-uglify-es": "^3.0.0",
 		"jquery": "^3.5.1"
 	}
 }
