--- a/config.json
+++ b/config.json
@@ -9,7 +9,8 @@
 		"src/_plugins/swiper-bundle.js",
 		"src/_plugins/mapping-listener.js",
 		"src/_plugins/mapping.js",
-		"node_modules/lazysizes/lazysizes.js"
+		"node_modules/lazysizes/lazysizes.js",
+		"node_modules/readmore-js/readmore.js"
 	],
 	"css": [
 		"src/_plugins/bootstrap.min.css",
