--- a/config.json
+++ b/config.json
@@ -7,15 +7,9 @@
 		"src/_plugins/bootstrap.bundle.min.js",
 		"src/_plugins/jquery.marquee.min.js",
 		"src/_plugins/swiper-bundle.js",
-		"src/_plugins/mapping-listener.js",
-		"src/_plugins/mapping.js",
-		"node_modules/lazysizes/lazysizes.js",
-		"node_modules/readmore-js/readmore.js"
+		"src/_plugins/mapping.js"
 	],
 	"css": [
-		"src/_plugins/bootstrap.min.css",
-		"src/_plugins/font.css",
-		"src/_plugins/swiper-bundle.css",
-		"src/_plugins/jquery-ui.css"
+		"src/_plugins/**.css"
 	]
 }
