--- a/config.json
+++ b/config.json
@@ -7,7 +7,8 @@
 		"src/_plugins/bootstrap.bundle.min.js",
 		"src/_plugins/jquery.marquee.min.js",
 		"src/_plugins/swiper-bundle.js",
-		"src/_plugins/mapping.js"
+		"src/_plugins/mapping.js",
+		"src/_plugins/aos.js"
 	],
 	"css": [
 		"src/_plugins/**.css"
